Adding lab 1.1.2 files

--- a/01-cloudformation/lab1-1-1.yml
+++ b/01-cloudformation/lab1-1-1.yml
@@ -4,4 +4,9 @@ Resources:
   TheBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: elpollolocodude
+      BucketName: !Ref BucketName
+Parameters:
+  BucketName:
+    Description: The name of the bucket
+    Type: String
+    Default: ''
