--- a/04-vpcs/lab4-2-1/template.yml
+++ b/04-vpcs/lab4-2-1/template.yml
@@ -130,30 +130,14 @@ Resources:
         - Key: stelligent-u-lab
           Value: '4.2'
       VpcId: !Ref VPC
-  InboundRule:
+  AllowAllInRule:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       NetworkAclId: !Ref ACL
       RuleNumber: 100
       Protocol: -1
       RuleAction: allow
-      CidrBlock: 24.32.231.81/32
-  AllowLocalVPCInRule:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      NetworkAclId: !Ref ACL
-      RuleNumber: 102
-      Protocol: -1
-      RuleAction: allow
-      CidrBlock: !Ref PrivateSubnetCidr
-  AllowRemoteVPCInRule:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      NetworkAclId: !Ref ACL
-      RuleNumber: 103
-      Protocol: -1
-      RuleAction: allow
-      CidrBlock: !Ref PeerVPCCidr
+      CidrBlock: 0.0.0.0/0
   OutboundRule:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
