--- a/05-ec2/lab5-3-2-private/template.yml
+++ b/05-ec2/lab5-3-2-private/template.yml
@@ -48,44 +48,57 @@ Resources:
         Monitoring: 
           Enabled: true
         NetworkInterfaces:
-          - SubnetId: !ImportValue bgar-lab-private-subnet-id
+          - SubnetId: !ImportValue bgar-lab-subnet-id
             DeviceIndex: 0
             Groups:
               - !Ref EC2SCG
-      Metadata:
-        AWS::CloudFormation::Init: 
-          configSets: 
-            cw_install:
-              - "prep_cw_agent"
-              - "install_collectd"
-              - "install_cw_agent"
-              - "run_cw_agent"
-          prep_cw_agent:
-            commands: 
-              create_work_dir: 
-                command: "mkdir /work"
-                cwd: "~"
-              download_cw_agent: 
-                command: ["wget", "https://s3.amazonaws.com/amazoncloudwatch-agent/ubuntu/amd64/latest/amazon-cloudwatch-agent.deb"]
-                cwd: "/work"
-              download_cw_agent_config: 
-                command: ["curl", "https://us-east-1-324320755747-elpollolocodude.s3.amazonaws.com/config.json", "-o", "config.json"]
-                cwd: "/work"
-          install_collectd:
-            commands:
-              install_collectd_pkg: 
-                command: ["apt-get", "install", "collectd" , "-y"]
-                cwd: "/work"
-          install_cw_agent:
-            commands:
-              install_cw_agent: 
-                command: ["dpkg", "-i", "-E", "./amazon-cloudwatch-agent.deb"]
-                cwd: "/work"
-          run_cw_agent:
-            commands:
-              run_cw_agent: 
-                command: ["/opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl", "-a", "fetch-config", "-m", "ec2", "-s", "-c", "file:/work/config.json"]
-                cwd: "~"
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash -xe
+            # apt-get update -y
+            # apt-get install -y python-setuptools
+            # mkdir -p /opt/aws/bin
+            # wget https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
+            # python -m easy_install --script-dir /opt/aws/bin aws-cfn-bootstrap-latest.tar.gz
+            # /opt/aws/bin/cfn-init -v --stack ${AWS::StackId} --resource EC2Template --configsets cw_install --region ${AWS::Region}
+            # /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource EC2Template --region ${AWS::Region}
+    Metadata:
+      AWS::CloudFormation::Init: 
+        configSets: 
+          cw_install:
+            - "prep_cw_agent"
+            - "install_collectd"
+            - "install_cw_agent"
+            - "run_cw_agent"
+        prep_cw_agent:
+          commands: 
+            create_work_dir: 
+              command: "mkdir /work"
+              cwd: "~"
+            download_cw_agent: 
+              command: "wget https://s3.amazonaws.com/amazoncloudwatch-agent/ubuntu/amd64/latest/amazon-cloudwatch-agent.deb"
+              cwd: "/work"
+            download_cw_agent_config: 
+              command: "curl https://us-east-1-324320755747-elpollolocodude.s3.amazonaws.com/config.json -o config.json"
+              cwd: "/work"
+            update_apt: 
+              command: "apt-get update"
+              cwd: "/work"
+        install_collectd:
+          commands:
+            install_collectd_pkg: 
+              command: "apt-get install collectd -y"
+              cwd: "/work"
+        install_cw_agent:
+          commands:
+            install_cw_agent: 
+              command: ["dpkg", "-i", "-E", "./amazon-cloudwatch-agent.deb"]
+              cwd: "/work"
+        run_cw_agent:
+          commands:
+            run_cw_agent: 
+              command: ["/opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl", "-a", "fetch-config", "-m", "ec2", "-s", "-c", "file:/work/config.json"]
+              cwd: "/work"
   UbuntuInstance:
     Type: AWS::EC2::Instance
     Properties:
