final lab thru 9.2.3

--- a/08-cloudwatch-logs/retro8-2/template.yml
+++ b/08-cloudwatch-logs/retro8-2/template.yml
@@ -85,7 +85,7 @@ Resources:
       CloudWatchLogsRoleArn: !GetAtt labLogRole.Arn
       IncludeGlobalServiceEvents: true
       IsLogging: true
-      S3KeyPrefix: logs/
+      S3KeyPrefix: logs
   SnsTopicMetricFilterCloudWatchAlarm:
     Type: "AWS::SNS::Topic"
     Properties:
