--- a/12-codepipeline/lab12-1-2/template.yml
+++ b/12-codepipeline/lab12-1-2/template.yml
@@ -19,6 +19,10 @@ Parameters:
     Description:  The repository to pull for pipeline execution
     Type: String
     Default: ''
+  ProjectName:
+    Description:  The repository to pull for pipeline execution
+    Type: String
+    Default: ''
 ######
 ######
 Resources: 
@@ -37,11 +41,15 @@ Resources:
             Principal:
               Service:
                 - codepipeline.amazonaws.com
+                - codebuild.amazonaws.com
             Action:
               - 'sts:AssumeRole'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AWSCloudFormationFullAccess
         - arn:aws:iam::aws:policy/AmazonS3FullAccess
+        - arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess
+        - arn:aws:iam::aws:policy/AWSCodePipeline_FullAccess
+        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
       Policies:
         - PolicyName: AllowIamActions
           PolicyDocument:
@@ -78,6 +86,7 @@ Resources:
         - Name: source
           Actions:
             - Name: PullSource
+              RunOrder: 1
               ActionTypeId: 
                 Category: Source
                 Owner: ThirdParty
@@ -85,7 +94,6 @@ Resources:
                 Version: 1
               OutputArtifacts:
                 - Name: LabSource
-              RunOrder: 1
               Configuration: 
                 Owner: !Ref GitHubOwner
                 Repo: !Ref RepositoryName
@@ -102,7 +110,6 @@ Resources:
                 Version: 1
               InputArtifacts: 
                 - Name: LabSource
-              RunOrder: 2
               Configuration: 
                 ProjectName: !Ref ProjectName
         - Name: deploy
@@ -129,27 +136,24 @@ Resources:
       Description: build project to validate our CF Template
       ServiceRole: !GetAtt  CodeExecutionRole.Arn
       Artifacts:
-          Type: NO_ARTIFACTS
+          Type: CODEPIPELINE
       Environment:
           Type: LINUX_CONTAINER
           ComputeType: BUILD_GENERAL1_SMALL
           Image: aws/codebuild/standard:4.0
           PrivilegedMode: true  
       Source:
-          Location: https://git-codecommit.eu-central-1.amazonaws.com/v1/repos/test-lint
           Type: CODEPIPELINE
           BuildSpec: |
             version: 0.2
             phases:
               install:
-                runtime-versions:
-                    ruby: 2.6    
                 commands:
-                - pip3 install awscli --upgrade --quiet
+                  - pip3 install awscli --upgrade --quiet
               build:
                 commands:
-                - aws cloudformation validate-template --template-body ./12-codepipeline/lab12-1-2/template.yml
-                  TimeoutInMinutes: 15
+                  - aws cloudformation validate-template --template-body ./12-codepipeline/lab12-1-2/template.yml
+          TimeoutInMinutes: 15
 ######
 ######
 Outputs:
@@ -157,7 +161,7 @@ Outputs:
     Value: !Ref Bucket 
   CloudFormationExecutionRole:
     Value: !Ref CloudFormationExecutionRole
-  CodePipelineExecutionRole:
-    Value: !Ref CodePipelineExecutionRole
+  CodeExecutionRole:
+    Value: !Ref CodeExecutionRole
   CodePipeline:
     Value: !Ref CodePipeline
