--- a/12-codepipeline/lab12-1-2/template.yml
+++ b/12-codepipeline/lab12-1-2/template.yml
@@ -127,7 +127,7 @@ Resources:
                 ActionMode: CREATE_UPDATE
                 RoleArn: !GetAtt CloudFormationExecutionRole.Arn
                 StackName: bgar-pipeline-12-1-1
-                TemplatePath: LabSource::bucket.yaml
+                TemplatePath: LabSource::12-codepipeline/bucket.yml
       RestartExecutionOnUpdate: false
   BuildProject:
     Type: AWS::CodeBuild::Project
