Changing child template for change trigger

--- a/12-codepipeline/lab12-2-2/child.yml
+++ b/12-codepipeline/lab12-2-2/child.yml
@@ -32,7 +32,7 @@ Resources:
     Type: AWS::DynamoDB::Table
     Properties:
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: ids
           AttributeType: S
       KeySchema:
         - AttributeName: id
